Correct setting of Apache env vars

--- a/doc/v0/Install.txt
+++ b/doc/v0/Install.txt
@@ -180,8 +180,8 @@ character encoding. Add these lines:
 
 # These lines are required to avoid "ascii codec can't decode byte" errors
 # when dealing with files and directories that contain non-ascii characters
-export LANG="en_GB.UTF-8"
-export LC_ALL="en_GB.UTF-8"
+LANG=en_GB.UTF-8
+LC_ALL=en_GB.UTF-8
 
 To install mod_wsgi, download from:
 http://www.modwsgi.org/
